--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
+    "date-fns": "^2.16.1",
     "js-cookie": "^2.2.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
